--- a/routine.html
+++ b/routine.html
@@ -142,14 +142,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
+<tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>        </td><td>AudioCardio app one hour while working </td>
+<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water.</td>
@@ -230,8 +230,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Before eating rinse mouth with xylitol </td>
-<tr><td>        </td><td>At start of meal, glycine powder, Vital Nutrients, about 3-4 grams</td>
-<tr><td>        </td><td>At start of meal, EnzymixPro, Apex Energetics, 1 capsule</td>
+<tr><td>        </td><td>At the start, glycine powder, Vital Nutrients, about 4 grams</td>
+<tr><td>        </td><td>In the middle, EnzymixPro, Apex Energetics, 1-2 capsules</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
