--- a/routine.html
+++ b/routine.html
@@ -167,6 +167,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>4:00 PM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
+<tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
@@ -182,6 +183,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
 <tr><td>        </td><td>Put on orange tinted glasses </td>
+<tr><td>        </td><td>Read in dim light, usually a book about health </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
@@ -257,6 +259,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
+<tr><td>        </td><td>Walk at least 10,000 steps per day </td>
 </table>
     
 <br>
