--- a/routine.html
+++ b/routine.html
@@ -210,12 +210,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>
-<!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>
 <tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
 <tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>
+<!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 </table>
 
 <br>
@@ -244,7 +244,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk while working</td>
 <tr><td> </td><td>Maintain correct spine posture</td>
-<tr><td> </td><td>Various short exercises</td>
+<tr><td> </td><td>Various short exercises and </td>
 <tr><td> </td><td>Go outside</td>
 <tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 <tr><td> </td><td>Drink water (8 cups per day)</td>
@@ -273,7 +273,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Ozone EBO2 therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Plasma dilution / plasmapheresis <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <!--<tr><td> </td><td>Bioregulator peptides</td>-->
 </table>
 
