--- a/routine.html
+++ b/routine.html
@@ -203,7 +203,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
 <tr><td>        </td><td>Annatto-E 150, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
 <tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
