--- a/routine.html
+++ b/routine.html
@@ -200,7 +200,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Organ Synergy, Designs For Health, 2 capsules</td>
-<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
+<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
 <tr><td>        </td><td>Annatto-E 150, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
