--- a/routine.html
+++ b/routine.html
@@ -244,10 +244,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk while working</td>
 <tr><td> </td><td>Maintain correct spine posture</td>
-<tr><td> </td><td>Various short exercises and </td>
+<tr><td> </td><td>Various short exercises </td>
 <tr><td> </td><td>Go outside</td>
-<tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 <tr><td> </td><td>Drink water (8 cups per day)</td>
+<!--<tr><td> </td><td>Jump for lymphatic system and to correct posture</td>-->
 <!--<tr><td> </td><td>4-7-8 breathing</td>-->
 </table>
 
