--- a/routine.html
+++ b/routine.html
@@ -266,6 +266,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Monthly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Dehumidifier maintenance </td>
+<tr><td>        </td><td>Dust home very thoroughly </td>
 </table>
 
 <br>
