--- a/routine.html
+++ b/routine.html
@@ -330,6 +330,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Check humidity level of home</td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
 <tr><td> </td><td>Test home for mold</td>
+<tr><td> </td><td>Test water for contaminants</td>
 <tr><td> </td><td>Test home for EMFs</td>
 </table>
 
