--- a/routine.html
+++ b/routine.html
@@ -355,7 +355,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No burned or blackened foods</td>
 <tr><td> </td><td>No high-heat cooking</td>
-<tr><td> </td><td>No fruit juice</td>
+<tr><td> </td><td>Minimal fruit juice</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No industrial seed oils</td>
@@ -370,8 +370,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No fluoridated water</td>
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>Minimal carbs at breakfast</td>
-<tr><td> </td><td>No chocolate with heavy metals</td>
-<tr><td> </td><td>No kale with heavy metals</td>
+<tr><td> </td><td>No chocolate if it contains heavy metals</td>
+<tr><td> </td><td>No kale if it contains heavy metals</td>
 
 <tr><td> </td><td>Food never contacts plastic </td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
@@ -380,7 +380,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal heavy metals</td>
 <tr><td> </td><td>Minimal drugs</td>
 <tr><td> </td><td>Minimal antibiotics</td>
-<tr><td> </td><td>No IV antibiotics</td>
+<tr><td> </td><td>Minimal IV antibiotics</td>
 <tr><td> </td><td>Minimal NSAIDs</td>
 <tr><td> </td><td>Minimal personal care products</td>
 <tr><td> </td><td>No antiperspirant</td>
@@ -395,12 +395,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
-<tr><td> </td><td>No mouth breathing</td>
-<tr><td> </td><td>No mouthwash </td>
-<tr><td> </td><td>No root canals</td>
-<tr><td> </td><td>No metal dental implants</td>
+<tr><td> </td><td>Minimal mouth breathing</td>
+<tr><td> </td><td>Minimal mouthwash </td>
+<!--<tr><td> </td><td>No root canals</td>-->
+<tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
-<tr><td> </td><td>No loud noise - this causes hearing loss</td>
+<tr><td> </td><td>No extreme loud noise - this causes hearing loss</td>
 
 <!--<tr><td> </td><td>Do not put fingers in nose</td>-->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td>-->
