--- a/routine.html
+++ b/routine.html
@@ -353,9 +353,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Avoid </b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>No processed food</td>
+<tr><td> </td><td>No canned foods</td>
 <tr><td> </td><td>No burned or blackened foods</td>
 <tr><td> </td><td>No high-heat cooking</td>
-<tr><td> </td><td>Minimal fruit juice</td>
+<tr><td> </td><td>Minimal fruit juice, instead consume whole fruit</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No industrial seed oils</td>
@@ -365,15 +366,17 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
+<tr><td> </td><td>Minimal protein powders</td>
 <tr><td> </td><td>No whey protein powder</td>
-<tr><td> </td><td>Minimal iodine</td>
+<tr><td> </td><td>Minimal iodine if hypothyroid</td>
 <tr><td> </td><td>No fluoridated water</td>
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>Minimal carbs at breakfast</td>
+<tr><td> </td><td>No eating the same foods every day</td>
 <tr><td> </td><td>No chocolate if it contains heavy metals</td>
 <tr><td> </td><td>No kale if it contains heavy metals</td>
 
-<tr><td> </td><td>Food never contacts plastic </td>
+<tr><td> </td><td>No plastic food containers or packaging</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
 
 <tr><td> </td><td>Minimal chemicals</td>
@@ -389,18 +392,18 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
 
-<tr><td> </td><td>No carpet, only hardwood floors</td>
+<tr><td> </td><td>No carpet or vinyl floors, only hardwood floors</td>
 <tr><td> </td><td>No gas stoves, use only electric</td>
 <tr><td> </td><td>No fluorescent lights</td>
 
-<tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
+<tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>Minimal mouth breathing</td>
-<tr><td> </td><td>Minimal mouthwash </td>
+<tr><td> </td><td>No mouthwash </td>
 <!--<tr><td> </td><td>No root canals</td>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
-<tr><td> </td><td>No extreme loud noise - this causes hearing loss</td>
+<tr><td> </td><td>No very loud noise - this causes hearing loss</td>
 
 <!--<tr><td> </td><td>Do not put fingers in nose</td>-->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td>-->
