--- a/routine.html
+++ b/routine.html
@@ -235,6 +235,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>At the start, glycine powder, Vital Nutrients, about 4 grams</td>
 <tr><td>        </td><td>In the middle, EnzymixPro, Apex Energetics, 1-2 capsules</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
+<tr><td>        </td><td>During meal, 1-2 tsp various dried herbs</td>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
 
@@ -315,6 +316,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>HumanN Nitric Oxide Indicator Strip test</td>
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 <tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
@@ -413,6 +415,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Arterosil HP and Vascanox HP</td>
 <tr><td> </td><td>NanoVi <a href="https://eng3corp.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>PEMF <a href="https://sedonawellness.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Sauna with electrolytes </td>
