--- a/routine.html
+++ b/routine.html
@@ -318,16 +318,17 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>HumanN Nitric Oxide Indicator Strip test</td>
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
+<tr><td> </td><td>Prodrome Sciences, ProdromeScan</td>
 <tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
 <tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
+<tr><td> </td><td>RealTime Labs, Mycotoxin Panel</td>
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
-<tr><td> </td><td>Doctors Data, Urine Toxic Metals</td>
+<!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Review genetic data at PureGenomics <a href="https://www.puregenomics.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review EWG water filter functionality <a href="https://www.ewg.org/tapwater/system.php?pws=CA0710003" target="_blank">Link</a></td>
 <tr><td> </td><td>Review Bristle dental microbiome results <a href="https://www.bristlehealth.com/" target="_blank">Link</a></td>
 <tr><td> </td><td>Review nutrition at cronometer.com</td>
-<!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> --> <!-- Actionable?-->
 <tr><td> </td><td>Check blood pressure</td>
 <tr><td> </td><td>Check humidity level of home</td>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td>
