--- a/routine.html
+++ b/routine.html
@@ -335,6 +335,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Test home for mold</td>
 <tr><td> </td><td>Test water for contaminants</td>
 <tr><td> </td><td>Test home for EMFs</td>
+<tr><td> </td><td>Zinc taste test</td>
 </table>
 
 <br>
