--- a/routine.html
+++ b/routine.html
@@ -379,6 +379,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No eating the same foods every day</td>
 <tr><td> </td><td>No chocolate if it contains heavy metals</td>
 <tr><td> </td><td>No kale if it contains heavy metals</td>
+<tr><td> </td><td>No drinking water or liquids during meals</td>
 
 <tr><td> </td><td>No plastic food containers or packaging</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
