--- a/routine.html
+++ b/routine.html
@@ -383,6 +383,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td> </td><td>No plastic food containers or packaging</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
+<tr><td> </td><td>No white toilet paper <a href="https://www.witpress.com/elibrary/wit-transactions-on-ecology-and-the-environment/78/14382" target="_blank">Link</a></td>
 
 <tr><td> </td><td>Minimal chemicals</td>
 <tr><td> </td><td>Minimal heavy metals</td>
