--- a/routine.html
+++ b/routine.html
@@ -372,11 +372,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal protein powders</td>
 <tr><td> </td><td>No whey protein powder</td>
-<tr><td> </td><td>Minimal iodine if hypothyroid</td>
+<!--<tr><td> </td><td>Minimal iodine if hypothyroid</td>-->
 <tr><td> </td><td>No fluoridated water</td>
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>Minimal carbs at breakfast</td>
 <tr><td> </td><td>No eating the same foods every day</td>
+<tr><td> </td><td>No grain-fed chicken</td>
 <tr><td> </td><td>No chocolate if it contains heavy metals</td>
 <tr><td> </td><td>No kale if it contains heavy metals</td>
 <tr><td> </td><td>No drinking water or liquids during meals</td>
@@ -405,7 +406,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>Minimal mouth breathing</td>
-<tr><td> </td><td>No mouthwash </td>
+<!--<tr><td> </td><td>No mouthwash </td>-->
 <!--<tr><td> </td><td>No root canals</td>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
