--- a/routine.html
+++ b/routine.html
@@ -204,15 +204,15 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E 150, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
-<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
+<!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>
-<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
+<!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
-<tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>
+<!--<tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>-->
 <tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
 <tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
@@ -336,6 +336,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Test water for contaminants</td>
 <tr><td> </td><td>Test home for EMFs</td>
 <tr><td> </td><td>Zinc taste test</td>
+<!--<tr><td> </td><td>Check stool is not floating</td>-->
 </table>
 
 <br>
@@ -377,7 +378,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>Minimal carbs at breakfast</td>
 <tr><td> </td><td>No eating the same foods every day</td>
-<tr><td> </td><td>No grain-fed chicken</td>
+<tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td>
+<!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate if it contains heavy metals</td>
 <tr><td> </td><td>No kale if it contains heavy metals</td>
 <tr><td> </td><td>No drinking water or liquids during meals</td>
