--- a/routine.html
+++ b/routine.html
@@ -381,7 +381,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate if it contains heavy metals</td>
-<tr><td> </td><td>No kale if it contains heavy metals</td>
+<!--<tr><td> </td><td>No kale if it contains heavy metals</td>-->
 <tr><td> </td><td>No drinking water or liquids during meals</td>
 
 <tr><td> </td><td>No plastic food containers or packaging</td>
