--- a/routine.html
+++ b/routine.html
@@ -143,22 +143,24 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td>
-<tr><td>        </td><td>Weigh self on scale</td>
+<tr><td>        </td><td>Occasionally weigh self on scale</td>
+<tr><td>        </td><td>Occasionally check heart rate variability</td>
+<tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
+<tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
-<tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
-<tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of warm water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
 <!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
-<tr><td>9:30 AM </td><td>Breakfast</td>   
-<tr><td>        </td><td>Blend avocado, frisee, endive, dandelion, sage, berries, lemon juice, water.</td>
+<tr><td>9:00 AM </td><td>Breakfast</td>   
+<tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
+<tr><td>        </td><td>1-2 tablespoons olive oil</td>
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements (See list below)</td>
-<tr><td>12:30 PM </td><td>Lunch</td>
-<tr><td>        </td><td>Soup consisting of lentils, leaks, pork, with sunflower sprouts, berries</td>
+<tr><td>12:00 PM </td><td>Lunch</td>
+<tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), sunflower sprouts, razzberries.  Turn on range hood vent while cooking for air quality.</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia</td>
@@ -166,11 +168,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
 <tr><td>4:00 PM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
-<tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
+<tr><td>        </td><td>Chicken or salmon or other fish, pearled sorghum, various steamed vegetables, spices</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
@@ -182,9 +183,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
-<tr><td>        </td><td>Put on orange tinted glasses </td>
-<tr><td>        </td><td>Read in dim light, usually a book about health </td>
-<tr><td>9:30 PM </td><td>Turn on air conditioner</td>
+<tr><td>        </td><td>Put on tinted glasses </td>
+<tr><td>        </td><td>Read in dim light </td>
+<tr><td>9:00 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
 
@@ -193,16 +194,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 2500IU</td>
-<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td> <!-- change to krill -->
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
+<!--<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>-->
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
-<tr><td>        </td><td>Organ Synergy, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
-<tr><td>        </td><td>Annatto-E 150, Designs For Health, 1 capsules</td>
-<tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
+<!--<tr><td>        </td><td>Thymoquin</td>-->
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
@@ -213,8 +212,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>-->
-<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
-<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>
+<!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>-->
+<!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
 </table>
 
@@ -222,7 +221,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
-<tr><td>        </td><td>Ceylon Cinnamon powder, 1/4 tsp</td>
+<tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 </table>
