--- a/routine.html
+++ b/routine.html
@@ -146,12 +146,13 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Occasionally weigh self on scale</td>
 <tr><td>        </td><td>Occasionally check heart rate variability</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
+<tr><td>        </td><td>Brisk walk outside 30 minutes </td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
-<!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups of water</td>-->
-<tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<!--<tr><td>        </td><td>Maragen ionic calcium in two cups of water</td>-->
 <tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
-<!--<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
+<!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
+<tr><td>8:00 AM </td><td>Go outside to set circadian rhythm</td>
 <tr><td>9:00 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
@@ -160,15 +161,16 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements (See list below)</td>
 <tr><td>12:00 PM </td><td>Lunch</td>
-<tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), sunflower sprouts, razzberries.  Turn on range hood vent while cooking for air quality.</td>
-<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
+<tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
+<tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
+<tr><td>        </td><td>Chew greens slowly to maximize nitrate.</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
-<tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia</td>
+<tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia.</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
 <tr><td>4:00 PM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>5:00 PM </td><td>Dinner</td>
-<tr><td>        </td><td>Chicken or salmon or other fish, pearled sorghum, various steamed vegetables, spices</td>
+<tr><td>        </td><td>Chicken or fish, pearled sorghum, various steamed vegetables</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
@@ -179,7 +181,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
-<tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
+<tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
@@ -234,7 +236,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>At the start, glycine powder, Vital Nutrients, about 4 grams</td>
 <tr><td>        </td><td>In the middle, EnzymixPro, Apex Energetics, 1-2 capsules</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
-<tr><td>        </td><td>During meal, 1-2 tsp various dried herbs</td>
+<!--<tr><td>        </td><td>During meal, 1-2 tsp various dried herbs</td>-->
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
 
@@ -406,8 +408,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td>
 
-<tr><td> </td><td>Minimal mouth breathing</td>
-<!--<tr><td> </td><td>No mouthwash </td>-->
+<tr><td> </td><td>No inbound mouth breathing</td>
+<tr><td> </td><td>No mouthwash that kills good oral bacteria</td>
 <!--<tr><td> </td><td>No root canals</td>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
