--- a/routine.html
+++ b/routine.html
@@ -146,7 +146,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Occasionally weigh self on scale</td>
 <tr><td>        </td><td>Occasionally check heart rate variability</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
-<tr><td>        </td><td>Brisk walk outside 30 minutes </td>
+<tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
+<tr><td>        </td><td>Brisk walk outside 30 minutes to set circadian rhythm</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
 <tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td>
 <!--<tr><td>        </td><td>Maragen ionic calcium in two cups of water</td>-->
@@ -163,7 +164,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>12:00 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
-<tr><td>        </td><td>Chew greens slowly to maximize nitrate.</td>
+<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia.</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
@@ -195,7 +196,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Vitamin D3, Jarrow, 2500IU</td>
+<tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
 <!--<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>-->
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
@@ -232,11 +233,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Before eating rinse mouth with xylitol </td>
-<tr><td>        </td><td>At the start, glycine powder, Vital Nutrients, about 4 grams</td>
-<tr><td>        </td><td>In the middle, EnzymixPro, Apex Energetics, 1-2 capsules</td>
+<tr><td>        </td><td>At the start of the meal, glycine powder, Vital Nutrients, about 4 grams</td>
+<tr><td>        </td><td>In the middle of the meal, EnzymixPro, Apex Energetics, 1-2 capsules</td>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 dropper fulls</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
-<!--<tr><td>        </td><td>During meal, 1-2 tsp various dried herbs</td>-->
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
 
@@ -409,7 +409,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>No inbound mouth breathing</td>
-<tr><td> </td><td>No mouthwash that kills good oral bacteria</td>
+<tr><td> </td><td>No mouthwash that kills good oral bacteria which convert nitrate to nitrite</td>
 <!--<tr><td> </td><td>No root canals</td>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
