--- a/routine.html
+++ b/routine.html
@@ -317,7 +317,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Occasional Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>HumanN Nitric Oxide Indicator Strip test</td>
+<tr><td> </td><td>Urine pH strip test</td>
+<tr><td> </td><td>Nitric oxide strip test</td>
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 <tr><td> </td><td>Prodrome Sciences, ProdromeScan</td>
 <tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
@@ -390,6 +391,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No white toilet paper <a href="https://www.witpress.com/elibrary/wit-transactions-on-ecology-and-the-environment/78/14382" target="_blank">Link</a></td>
 
 <tr><td> </td><td>Minimal chemicals</td>
+<tr><td> </td><td>No dry cleaning, the chemicals cause Parkinsons disease</td>
 <tr><td> </td><td>Minimal heavy metals</td>
 <tr><td> </td><td>Minimal drugs</td>
 <tr><td> </td><td>Minimal antibiotics</td>
@@ -409,7 +411,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>No inbound mouth breathing</td>
-<tr><td> </td><td>No mouthwash that kills good oral bacteria which convert nitrate to nitrite</td>
+<tr><td> </td><td>No alcohol-baased mouthwash that kills oral bacteria which convert nitrate to nitrite</td>
 <!--<tr><td> </td><td>No root canals</td>-->
 <tr><td> </td><td>No metal dental implants, only ceramic zirconia</td>
     
