--- a/routine.html
+++ b/routine.html
@@ -197,24 +197,23 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td>
-<!--<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>-->
+<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 1 capsules</td>
 <tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a></td>  <!-- sandra kaufman, david minkoff video 4 years ago-->
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules</td>
-<!--<tr><td>        </td><td>Thymoquin</td>-->
+<tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>-->
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
 <tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>
+<!--<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td>-->
 <!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>-->
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
-<!--<tr><td>        </td><td>Ginger, Oregons Wild Harvest, 1 capsule</td>-->
 <!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>-->
 <!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td>-->
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td>-->
@@ -223,8 +222,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
 <tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
+<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>
+<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
 </table>
@@ -234,8 +234,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>At the start of the meal, glycine powder, Vital Nutrients, about 4 grams</td>
-<tr><td>        </td><td>In the middle of the meal, EnzymixPro, Apex Energetics, 1-2 capsules</td>
-<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 dropper fulls</td>
+<tr><td>        </td><td>In the middle of the meal, if the meal has protein, EnzymixPro, Apex Energetics, 1-2 capsules</td>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 40 drops</td>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating</td>
 </table>
@@ -261,7 +261,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Wear hat with wide brim to protect facial skin from UV light </td>
 <tr><td>        </td><td>Practice intermittent hypoxic training </td>
 <tr><td>        </td><td>Look far away </td>
-<tr><td>        </td><td>Walk at least 10,000 steps per day </td>
 </table>
     
 <br>
@@ -363,6 +362,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No canned foods</td>
 <tr><td> </td><td>No burned or blackened foods</td>
 <tr><td> </td><td>No high-heat cooking</td>
+<tr><td> </td><td>No high smoke point oils</td>
 <tr><td> </td><td>Minimal fruit juice, instead consume whole fruit</td>
 <tr><td> </td><td>No alcohol</td>
 <tr><td> </td><td>No gluten</td>
@@ -382,13 +382,13 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No eating the same foods every day</td>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td>
 <!-- no pre cut pre packaged salads per gundry -->
-<tr><td> </td><td>No chocolate if it contains heavy metals</td>
+<tr><td> </td><td>No chocolate with high heavy metals</td>
 <!--<tr><td> </td><td>No kale if it contains heavy metals</td>-->
 <tr><td> </td><td>No drinking water or liquids during meals</td>
 
 <tr><td> </td><td>No plastic food containers or packaging</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
-<tr><td> </td><td>No white toilet paper <a href="https://www.witpress.com/elibrary/wit-transactions-on-ecology-and-the-environment/78/14382" target="_blank">Link</a></td>
+<!--<tr><td> </td><td>No white toilet paper <a href="https://www.witpress.com/elibrary/wit-transactions-on-ecology-and-the-environment/78/14382" target="_blank">Link</a></td>-->
 
 <tr><td> </td><td>Minimal chemicals</td>
 <tr><td> </td><td>No dry cleaning, the chemicals cause Parkinsons disease</td>
