--- a/routine.html
+++ b/routine.html
@@ -146,6 +146,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Occasionally weigh self on scale</td>
 <tr><td>        </td><td>Occasionally check heart rate variability</td>
 <tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td>
+<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
 <tr><td>        </td><td>Rinse mouth with xylitol tablets </td>
 <tr><td>        </td><td>Brisk walk outside 30 minutes to set circadian rhythm</td>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td> <!-- before sunscreen else it blocks red/IR light?-->
@@ -154,6 +155,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td>
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>-->
 <tr><td>8:00 AM </td><td>Go outside to set circadian rhythm</td>
+<tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
 <tr><td>9:00 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, frisee, endive, blackberries, pomegranate seeds, lime or lemon juice, water.</td>
 <tr><td>        </td><td>The prebiotic vegetables above such as frisee etc are varied daily to create a diverse microbiome</td>
@@ -161,7 +163,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Vegetable prebiotic mashup drink</td>-->
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements (See list below)</td>
-<tr><td>12:00 PM </td><td>Lunch</td>
+<tr><td>11:00 AM </td><td>Lunch</td>
 <tr><td>        </td><td>Soup (lentils, leaks, celery, chicken, salt), dark leafy greens, razzberries, cacao nibs</td>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality.</td>
 <tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td>
@@ -169,15 +171,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>This walk in the sun produces dopamine in the eyes which prevents myopia.</td>
 <tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td>
-<tr><td>4:00 PM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td>
-<tr><td>5:00 PM </td><td>Dinner</td>
-<tr><td>        </td><td>Chicken or fish, pearled sorghum, various steamed vegetables</td>
+<tr><td>3:30 PM </td><td>Dinner, as early as possible</td>
+<tr><td>        </td><td>Chicken or salmon, pearled sorghum, various steamed vegetables</td>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
@@ -185,6 +186,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
+<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td>
 <tr><td>        </td><td>Turn off computer </td>
 <tr><td>        </td><td>Put on tinted glasses </td>
 <tr><td>        </td><td>Read in dim light </td>
@@ -207,7 +209,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td>-->
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a></td>
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>-->
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsules</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
 <tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td>
