--- a/routine.html
+++ b/routine.html
@@ -225,7 +225,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Ceylon Cinnamon powder, 1/2 tsp</td>
-<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>
+<tr><td>        </td><td>Parsley powder, 1/2 tsp</td>
+<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td>-->
 <tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td>-->
@@ -320,6 +321,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Urine pH strip test</td>
 <tr><td> </td><td>Nitric oxide strip test</td>
+<tr><td> </td><td>NAD testing</td>
 <tr><td> </td><td>Genova Diagnostics, ION Panel</td>
 <tr><td> </td><td>Prodrome Sciences, ProdromeScan</td>
 <tr><td> </td><td>Genova Diagnostics, GI Effects Stool Profile</td>
