--- a/routine.html
+++ b/routine.html
@@ -407,6 +407,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers</td>
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
+<tr><td> </td><td>No living within 1000-2000 feet of a major freeway, for air quality</td>
 
 <tr><td> </td><td>No carpet or vinyl floors, only hardwood floors</td>
 <tr><td> </td><td>No gas stoves, use only electric</td>
